discussion/kv_engine/128640/128640_rev21_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-39505: Make server_stats use StatCollector

Some stats currently in server_stats will be exposed for Prometheus in
the future.

Prepare by moving server_stats to adding stats using a StatCollector
instance. Existing behaviour is unchanged - add_casted_stat is a
wrapper around CBStatCollector already, it simply used more directly
now.

Change-Id: I0036d990c26f1a1607def6841ed85610bbde5bc2

======================================================================================================================
COMMENTS
======================================================================================================================
Author: James H
Date: 2020-08-07 14:20:58.000000000
Message: 
Uploaded patch set 21: Patch Set 20 was rebased.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2020-08-07 15:11:35.000000000
Message: 
Patch Set 21: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/3706/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/include/statistics/stats.def.h:64:1: error: C++ requires a type specifier for all declarations [clang-diagnostic-error]
STAT(ep_storage_age, microseconds, , , )
^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/include/statistics/stats.def.h:64:6: error: use of undeclared identifier "ep_storage_age" [clang-diagnostic-error]
STAT(ep_storage_age, microseconds, , , )
     ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/include/statistics/stats.def.h:64:22: error: use of undeclared identifier "microseconds" [clang-diagnostic-error]
STAT(ep_storage_age, microseconds, , , )
                     ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/include/statistics/stats.def.h:64:36: error: expected expression [clang-diagnostic-error]
STAT(ep_storage_age, microseconds, , , )
                                   ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/include/statistics/stats.def.h:64:38: error: expected expression [clang-diagnostic-error]
STAT(ep_storage_age, microseconds, , , )
                                     ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/include/statistics/stats.def.h:64:40: error: expected expression [clang-diagnostic-error]
STAT(ep_storage_age, microseconds, , , )
                                       ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/include/statistics/stats.def.h:64:41: error: expected ";" after top level declarator [clang-diagnostic-error]
STAT(ep_storage_age, microseconds, , , )
                                        ^
                                        ;

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/3706/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/include/statistics/stats.def.h:64:1:
error: C++ requires a type specifier for all declarations [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/3706/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/25533/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/2221/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: James H
Date: 2020-08-08 21:40:58.000000000
Message: 
Patch Set 21:

This change is ready for review.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2020-08-08 23:19:00.000000000
Message: 
Patch Set 21:

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/29501/ : FAILURE

Compile error at c:\jenkins\workspace\kv_engine-windows-master\kv_engine\include\statistics\stat_units.h(85): error C2039: "string_view_literals": is not a member of "std" ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/29501/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/12855/ : FAILURE

Compile error at [2020-08-08T22:17:56.521Z] ../kv_engine/include/statistics/all_stats.h:151:1:
error: missing braces around initializer for ?std::__array_traits<cb::stats::StatSpec, 211>::_Type {aka cb::stats::StatSpec [211]}? [-Werror=missing-braces]
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/12855/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/4070/ : FAILURE

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/5139/ : FAILURE

Compile error at [2020-08-08T22:12:28.062Z] ../kv_engine/include/statistics/all_stats.h:151:1:
error: missing braces around initializer for ?std::__array_traits<cb::stats::StatSpec, 211>::_Type {aka cb::stats::StatSpec [211]}? [-Werror=missing-braces]
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/5139/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/5042/ : FAILURE

Compile error at [2020-08-08T21:57:15.054Z] ../kv_engine/include/statistics/all_stats.h:151:1:
error: missing braces around initializer for ?std::__array_traits<cb::stats::StatSpec, 211>::_Type {aka cb::stats::StatSpec [211]}? [-Werror=missing-braces]
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/5042/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/4953/ : FAILURE

Compile error at [2020-08-08T21:58:55.771Z] ../kv_engine/include/statistics/all_stats.h:151:1:
error: missing braces around initializer for ?std::__array_traits<cb::stats::StatSpec, 211>::_Type {aka cb::stats::StatSpec [211]}? [-Werror=missing-braces]
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/4953/ )
----------------------------------------------------------------------------------------------------------------------
Author: Dave Rigby
Date: 2020-08-12 12:52:53.000000000
Message: 
Patch Set 21: Code-Review-1

(1 comment)
Line:276, include/statistics/stats.def.h -> Seems reasonable. Could also add a `stat_reset_string` stat (say cbstats only) which maintains the textual version.

----------------------------------------------------------------------------------------------------------------------
Author: Dave Rigby
Date: 2020-08-12 12:53:02.000000000
Message: 
Patch Set 21: Code-Review+1
----------------------------------------------------------------------------------------------------------------------
